----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2005-05-22 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/charset_conversion.lib.php: diacritics wrongly converted 
      in Browse mode under MySQL 4.1.x if AllowAnywhereRecoding set to TRUE

2005-05-19 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_select.php: bug #1204235, searching on a VARBINARY field

2005-05-18 Marc Delisle  <lem9@users.sourceforge.net>
    * export.php: bug #1193442, 8 extra spaces at end of export area,
      thanks to Ryan Schmidt
    * db_details_structure.php: bug #1193430, zero_rows parameter
      not url-encoded, thanks to Ryan Schmidt

2005-05-17 Marc Delisle  <lem9@users.sourceforge.net>
    * server_privileges.php, libraries/server_privileges.js:
      make the password generator work also on user account editing

2005-05-17 Olivier Mueller <om@omnis.ch>
    * server_privileges.php, libraries/server_privileges.js: RFE #1197482,
      password generator on user creation.  RFC: ok like that?  TODO: add strings.

2005-05-15 Marc Delisle  <lem9@users.sourceforge.net>
    * sql.php, libraries/sqlparser.lib.php: bug #1120434, comment at the end
      of query is applied to appended LIMIT as well

2005-05-13 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_printview.php: bug #1178760, header not sent when displaying
      print view of multi tables, thanks to Hrvoje Novosel - interghost 
    * libraries/functions.js: Patch #1191447, hand pointer on mouseover and
      mousedown, thanks to Ken Stanley - eclipsboi

2005-05-11 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_properties.inc.php: bug #1069012, table collation forgotten
      when adding fields
    * libraries/storage_engines.lib.php: bug 1180119, undefined variable when
      showing the details of a storage engine under MySQL 4.0.x

2005-05-10 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/sqlparser.lib.php: bug #1198156, undefined variable