@@ -8,6 +8,8 @@ $Source$
 2005-05-22 Marc Delisle  <lem9@users.sourceforge.net>
     * libraries/charset_conversion.lib.php: diacritics wrongly converted 
       in Browse mode under MySQL 4.1.x if AllowAnywhereRecoding set to TRUE
+    * tbl_properties_structure.php, tbl_properties.inc.php,
+      libraries/sqlparser.lib.php: bug #1163595, NULL detection of TIMESTAMP
 
 2005-05-19 Marc Delisle  <lem9@users.sourceforge.net>
     * tbl_select.php: bug #1204235, searching on a VARBINARY field
